@@ -1,6 +1,5 @@
-// file      : Slot/driver.cpp
 // author    : Boris Kolpackov <boris@kolpackov.net>
-// cvs-id    : $Id$
+// $Id$
 
 #include "tao/PI/PI.h"
 #include "tao/LocalObject.h"
@@ -57,10 +56,15 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
     orb->destroy ();
   }
   catch (PortableInterceptor::InvalidSlot const&)
-  {
-    ACE_ERROR ((LM_ERROR, "ERROR: Caught InvalidSlot exception.\n"));
-    return 1;
-  }
+    {
+      ACE_ERROR ((LM_ERROR, "ERROR: Caught InvalidSlot exception.\n"));
+      return 1;
+    }
+  catch (const CORBA::Exception& ex)
+    {
+      ex._tao_print_exception ("Exception caught:");
+      return 1;
+    }
 
   return 0;
 }
